[package]
name = "revmc-worker"
description = "EVM bytecode Aot compiling worker in node runtime"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["std"] }
revm.workspace = true
revmc = {workspace = true, features=["llvm"]}
libloading = "0.8"
once_cell = "1.20.2"
tokio = { version = "1.41.1", features = ["full"] }
sled = "0.34.7"
thiserror = "1.0.34"
color-eyre = { version = "0.6", optional = true }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }
tracing-appender = { version = "0.2.3", optional = true }
chrono = { version = "0.4.38", optional = true }
chrono-tz = { version = "0.10.0", optional = true }

[features]
default = ["tracing-subscriber", "tracing-appender", "chrono", "chrono-tz", "color-eyre"]
