[package]
name = "revmc-worker"
description = "Evm Compiler worker that compiles in node runtime"


version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["std"] }

revm.workspace = true
revmc.workspace = true

revm-interpreter = { workspace = true, features = ["parse"] }
revm-primitives.workspace = true

revmc-backend.workspace = true
revmc-llvm.workspace = true
revmc-builtins = { workspace = true, features = ["ir"] }
revmc-cranelift = { workspace = true, optional = true }

color-eyre.workspace = true
# color-eyre = { workspace = true, optional = true }
once_cell = "1.20.2"
tokio = { version = "1.41.1", features = ["full"] }
sled = "0.34.7"
thiserror = "1.0.34"
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = [
	"env-filter",
], optional = true }
tracing-appender = { version = "0.2.3", optional = true }
chrono = { version = "0.4.38", optional = true }
chrono-tz = { version = "0.10.0", optional = true }
libloading = "0.8"
lru = "0.12.5"

[features]
default = ["tracing-subscriber", "tracing-appender", "chrono", "chrono-tz"]
